@@ -1,4 +1,9 @@
 User johns
+Date:
+
+    Adds trick speed support.
+
+User johns
 Date: Thu Feb 16 09:59:14 CET 2012
 
     Release Version 0.4.8
